force-app/main/default/objects/clofor_com_cfs__SLA_Calendar_Settings__c/fields/clofor_com_cfs__Holiday_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Holiday_Name_Prefix__c</fullName>
    <label>Holiday Name Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>