force-app/main/default/objects/clofor_com_cfs__SLA_Calendar_Settings__c/fields/clofor_com_cfs__Order__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>