force-app/main/default/objects/clofor_com_cfs__SLA_Calendar_Settings__c/fields/clofor_com_cfs__Timezone__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Timezone__c</fullName>
    <label>Timezone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>